syntax = "proto3";

package kv;

option go_package = "distributed-kv-store/proto";

service KVStore {
  // External API
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);

  // Internal API
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
}

message JoinRequest {
  string node_id = 1;
  string raft_address = 2;
  string grpc_address = 3;
}

message JoinResponse {
  bool success = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
  string leader_hint = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
  string leader_hint = 3;
}

message LogEntry {
  int64 term = 1;
  string key = 2;
  string value = 3;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
}
